--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,13 +7,14 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyMqX//vygRUsnwCIpSRLVlo",
+      "authorship_tag": "ABX9TyNLkaWcYKAwHnijkS8JBp4D",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -39,32 +40,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "x9wSZ-N6hPvq",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "train_path='/content/drive/My Drive/Custom_Modelling/shakespeare.txt'"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "RRcrZUrHhWzi",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "b386c8e6-45e3-4e0e-a3e2-f53d8713189b"
+        "outputId": "28929144-7b12-4c14-d3c3-6d2a5bb660a8"
       },
       "source": [
         "# GOOGLE COLLAB USERS ONLY\n",
         "%tensorflow_version 2.x"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,6 +79,124 @@
       "cell_type": "code",
       "metadata": {
         "id": "eTHS3z5dhZqc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import tensorflow as tf\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BVRRNCmyib5P",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "82838902-607c-4cab-aad1-3619bd703014"
+      },
+      "source": [
+        "tf.__version__"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.1.0'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j6rqUTswiu5r",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "c8dcb818-6ca3-43dd-f72b-b4d8a08bd4ae"
+      },
+      "source": [
+        "plt.figure(figsize=(12,8))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<Figure size 864x576 with 0 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<Figure size 864x576 with 0 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "B2SnpsoOi7F0",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Step 1: The Data\n",
+        "\n",
+        "You can grab any free text you want from here: https://www.gutenberg.org/\n",
+        "\n",
+        "We'll choose all of shakespeare's works (which we have already downloaded for you), mainly for two reasons:\n",
+        "\n",
+        "1. Its a large corpus of text, its usually recommended you have at least a source of 1 million characters total to get realistic text generation.\n",
+        "\n",
+        "2. It has a very distinctive style. Since the text data uses old style english and is formatted in the style of a stage play, it will be very obvious to us if the model is able to reproduce similar results."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "76VeJhmHi1mR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_path='/content/drive/My Drive/Custom_Modelling/shakespeare.txt'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xyd_3vJLjA-v",
         "colab_type": "code",
         "colab": {}
       },
