--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyNLkaWcYKAwHnijkS8JBp4D",
+      "authorship_tag": "ABX9TyOmwuTBv3AMpkL74Xfl0oLI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,6 +197,105 @@
       "cell_type": "code",
       "metadata": {
         "id": "Xyd_3vJLjA-v",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        },
+        "outputId": "4c5ba376-1266-4d86-95f9-76b0a513090c"
+      },
+      "source": [
+        "#reading the data from the text file\n",
+        "text = open(train_path, 'r').read()\n",
+        "print(text[:500])"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "                     1\n",
+            "  From fairest creatures we desire increase,\n",
+            "  That thereby beauty's rose might never die,\n",
+            "  But as the riper should by time decease,\n",
+            "  His tender heir might bear his memory:\n",
+            "  But thou contracted to thine own bright eyes,\n",
+            "  Feed'st thy light's flame with self-substantial fuel,\n",
+            "  Making a famine where abundance lies,\n",
+            "  Thy self thy foe, to thy sweet self too cruel:\n",
+            "  Thou that art now the world's fresh ornament,\n",
+            "  And only herald to the gaudy spring,\n",
+            "  Within thine own bu\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4OJCep79j8_F",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Understanding unique characters"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TXFWWgmkjqyu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "b8c9755b-67db-424c-bfb4-093962042036"
+      },
+      "source": [
+        "# The unique characters in the file\n",
+        "vocab = sorted(set(text))\n",
+        "print(vocab)\n",
+        "len(vocab)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['\\n', ' ', '!', '\"', '&', \"'\", '(', ')', ',', '-', '.', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', ':', ';', '<', '>', '?', 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', '[', ']', '_', '`', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', '|', '}']\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "84"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HLgZXhvWkDBa",
+        "colab_type": "text"
+      },
+      "source": [
+        "From the above output we can infer that the entire text corpus consists of 84 unique characters."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jroDkrLPkAoC",
         "colab_type": "code",
         "colab": {}
       },
