--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyOmwuTBv3AMpkL74Xfl0oLI",
+      "authorship_tag": "ABX9TyNTxhvozspS4NMFoFeFYlN3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,13 +46,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "28929144-7b12-4c14-d3c3-6d2a5bb660a8"
+        "outputId": "06f5c830-5583-4c69-ce84-34bf4fce6cac"
       },
       "source": [
         "# GOOGLE COLLAB USERS ONLY\n",
         "%tensorflow_version 2.x"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,12 +100,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "82838902-607c-4cab-aad1-3619bd703014"
+        "outputId": "5cdd09b5-a1e7-4711-8ee6-d6fb3c4d2890"
       },
       "source": [
         "tf.__version__"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -117,7 +117,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -130,12 +130,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "c8dcb818-6ca3-43dd-f72b-b4d8a08bd4ae"
+        "outputId": "e241120e-6ce2-4933-c84b-21d00fa6b44d"
       },
       "source": [
         "plt.figure(figsize=(12,8))"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -147,7 +147,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -202,14 +202,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "4c5ba376-1266-4d86-95f9-76b0a513090c"
+        "outputId": "4147a3db-29a7-4e6e-b88d-f5cd1df658fe"
       },
       "source": [
         "#reading the data from the text file\n",
         "text = open(train_path, 'r').read()\n",
         "print(text[:500])"
       ],
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 71
         },
-        "outputId": "b8c9755b-67db-424c-bfb4-093962042036"
+        "outputId": "7e4d55f9-f5ae-4710-8908-940b8d56de34"
       },
       "source": [
         "# The unique characters in the file\n",
@@ -259,7 +259,7 @@
         "print(vocab)\n",
         "len(vocab)"
       ],
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +278,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 7
         }
       ]
     },
@@ -293,9 +293,79 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hcPj_E4gLvpL",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Step 2: Text Processing\n",
+        "\n",
+        "### Text Vectorization\n",
+        "\n",
+        "We know a neural network can't take in the raw string data, we need to assign numbers to each character. Let's create two dictionaries that can go from numeric index to character and character to numeric index."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "jroDkrLPkAoC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "ef8e60d1-4eb4-4bdb-ecb8-7bc0654259e6"
+      },
+      "source": [
+        "char_to_ind = {u:i for i, u in enumerate(vocab)}\n",
+        "print(char_to_ind)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'\\n': 0, ' ': 1, '!': 2, '\"': 3, '&': 4, \"'\": 5, '(': 6, ')': 7, ',': 8, '-': 9, '.': 10, '0': 11, '1': 12, '2': 13, '3': 14, '4': 15, '5': 16, '6': 17, '7': 18, '8': 19, '9': 20, ':': 21, ';': 22, '<': 23, '>': 24, '?': 25, 'A': 26, 'B': 27, 'C': 28, 'D': 29, 'E': 30, 'F': 31, 'G': 32, 'H': 33, 'I': 34, 'J': 35, 'K': 36, 'L': 37, 'M': 38, 'N': 39, 'O': 40, 'P': 41, 'Q': 42, 'R': 43, 'S': 44, 'T': 45, 'U': 46, 'V': 47, 'W': 48, 'X': 49, 'Y': 50, 'Z': 51, '[': 52, ']': 53, '_': 54, '`': 55, 'a': 56, 'b': 57, 'c': 58, 'd': 59, 'e': 60, 'f': 61, 'g': 62, 'h': 63, 'i': 64, 'j': 65, 'k': 66, 'l': 67, 'm': 68, 'n': 69, 'o': 70, 'p': 71, 'q': 72, 'r': 73, 's': 74, 't': 75, 'u': 76, 'v': 77, 'w': 78, 'x': 79, 'y': 80, 'z': 81, '|': 82, '}': 83}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YWyqN_ZcL2jy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "502001fd-1c3c-4445-ca07-83e52a7c1ee8"
+      },
+      "source": [
+        "ind_to_char = np.array(vocab)\n",
+        "print(ind_to_char)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['\\n' ' ' '!' '\"' '&' \"'\" '(' ')' ',' '-' '.' '0' '1' '2' '3' '4' '5' '6'\n",
+            " '7' '8' '9' ':' ';' '<' '>' '?' 'A' 'B' 'C' 'D' 'E' 'F' 'G' 'H' 'I' 'J'\n",
+            " 'K' 'L' 'M' 'N' 'O' 'P' 'Q' 'R' 'S' 'T' 'U' 'V' 'W' 'X' 'Y' 'Z' '[' ']'\n",
+            " '_' '`' 'a' 'b' 'c' 'd' 'e' 'f' 'g' 'h' 'i' 'j' 'k' 'l' 'm' 'n' 'o' 'p'\n",
+            " 'q' 'r' 's' 't' 'u' 'v' 'w' 'x' 'y' 'z' '|' '}']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rL2sfe9eL89v",
         "colab_type": "code",
         "colab": {}
       },
