--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyNTxhvozspS4NMFoFeFYlN3",
+      "authorship_tag": "ABX9TyN3GlMEg0gKsnEIWMVwYzlB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,14 +202,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "4147a3db-29a7-4e6e-b88d-f5cd1df658fe"
+        "outputId": "27602a34-c8d3-493e-aa79-8619865f4bef"
       },
       "source": [
         "#reading the data from the text file\n",
         "text = open(train_path, 'r').read()\n",
         "print(text[:500])"
       ],
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,6 +366,112 @@
       "cell_type": "code",
       "metadata": {
         "id": "rL2sfe9eL89v",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "91a8e38f-0a56-4ae9-b707-b5082511157c"
+      },
+      "source": [
+        "encoded_text = np.array([char_to_ind[c] for c in text])\n",
+        "len(encoded_text)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5445609"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UYDpx84QM5rt",
+        "colab_type": "text"
+      },
+      "source": [
+        "## We now have a mapping we can use to go back and forth from characters to numerics."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6gSM2wsJMnMq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "2b567f33-177c-4c17-cf73-9b3af23d1673"
+      },
+      "source": [
+        "sample = text[:100]\n",
+        "print(sample)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "                     1\n",
+            "  From fairest creatures we desire increase,\n",
+            "  That thereby beauty's rose mi\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BlBlcNvCM_tg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "7a312584-af79-425d-9d42-ddeb3e9d46e2"
+      },
+      "source": [
+        "#printing the corresponding encoded text of the sample\n",
+        "encoded_text[:100]"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+              "        1,  1,  1,  1,  1, 12,  0,  1,  1, 31, 73, 70, 68,  1, 61, 56, 64,\n",
+              "       73, 60, 74, 75,  1, 58, 73, 60, 56, 75, 76, 73, 60, 74,  1, 78, 60,\n",
+              "        1, 59, 60, 74, 64, 73, 60,  1, 64, 69, 58, 73, 60, 56, 74, 60,  8,\n",
+              "        0,  1,  1, 45, 63, 56, 75,  1, 75, 63, 60, 73, 60, 57, 80,  1, 57,\n",
+              "       60, 56, 76, 75, 80,  5, 74,  1, 73, 70, 74, 60,  1, 68, 64])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LE_KEKkuNUM1",
         "colab_type": "code",
         "colab": {}
       },
