--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyN3GlMEg0gKsnEIWMVwYzlB",
+      "authorship_tag": "ABX9TyOeIAXJVZwA5LbeOSTm+siQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -469,9 +469,84 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9Aui2Y7GN125",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Step 3: Creating Batches\n",
+        "\n",
+        "Overall what we are trying to achieve is to have the model predict the next highest probability character given a historical sequence of characters. Its up to us (the user) to choose how long that historic sequence. Too short a sequence and we don't have enough information (e.g. given the letter \"a\" , what is the next character) , too long a sequence and training will take too long and most likely overfit to sequence characters that are irrelevant to characters farther out. While there is no correct sequence length choice, you should consider the text itself, how long normal phrases are in it, and a reasonable idea of what characters/words are relevant to each other."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "LE_KEKkuNUM1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        },
+        "outputId": "d7cbbd78-d432-4a88-9e29-cfaf6811d330"
+      },
+      "source": [
+        "print(text[:500])"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "                     1\n",
+            "  From fairest creatures we desire increase,\n",
+            "  That thereby beauty's rose might never die,\n",
+            "  But as the riper should by time decease,\n",
+            "  His tender heir might bear his memory:\n",
+            "  But thou contracted to thine own bright eyes,\n",
+            "  Feed'st thy light's flame with self-substantial fuel,\n",
+            "  Making a famine where abundance lies,\n",
+            "  Thy self thy foe, to thy sweet self too cruel:\n",
+            "  Thou that art now the world's fresh ornament,\n",
+            "  And only herald to the gaudy spring,\n",
+            "  Within thine own bu\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sId8lKDjN6Ch",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7e7d48e5-53c6-4e00-91bf-10bdabdd8db0"
+      },
+      "source": [
+        "line = \"From fairest creatures we desire increase\"\n",
+        "print(len(line))"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "41\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZguReuKNN_Ne",
         "colab_type": "code",
         "colab": {}
       },
