--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyOeIAXJVZwA5LbeOSTm+siQ",
+      "authorship_tag": "ABX9TyMgE9yPUPBVWvlx0K8C9LT6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -547,6 +547,53 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZguReuKNN_Ne",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "235bb650-41fa-4b86-d783-e6924a16bf10"
+      },
+      "source": [
+        "part_stanza = \"\"\"From fairest creatures we desire increase,\n",
+        "  That thereby beauty's rose might never die,\n",
+        "  But as the riper should by time decease,\"\"\"\n",
+        "\n",
+        "print(len(part_stanza))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "131\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AzQTh1sB1cKD",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Training Sequences\n",
+        "\n",
+        "The actual text data will be the text sequence shifted one character forward. For example:\n",
+        "\n",
+        "Sequence In: \"Hello my nam\"\n",
+        "Sequence Out: \"ello my name\"\n",
+        "\n",
+        "\n",
+        "We can use the `tf.data.Dataset.from_tensor_slices` function to convert a text vector into a stream of character indices."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8OlZ97c11Y5O",
         "colab_type": "code",
         "colab": {}
       },
