--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyMgE9yPUPBVWvlx0K8C9LT6",
+      "authorship_tag": "ABX9TyPoRgb2WafHMuFSS58J/bW8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -594,6 +594,50 @@
       "cell_type": "code",
       "metadata": {
         "id": "8OlZ97c11Y5O",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "seq_len = 120"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9BNeUeLW1pbe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f844c3ae-c4ff-4c61-db47-7aa605db2228"
+      },
+      "source": [
+        "total_num_seq = len(text)//(seq_len+1)\n",
+        "total_num_seq"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "45005"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EYjLxt7g1tnZ",
         "colab_type": "code",
         "colab": {}
       },
