--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyPoRgb2WafHMuFSS58J/bW8",
+      "authorship_tag": "ABX9TyMvc0xr1Z0DQqZJwgUyMVq1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
       "metadata": {
         "id": "RRcrZUrHhWzi",
         "colab_type": "code",
-        "outputId": "0266d717-d3ca-4528-b615-e37ab62938c8",
+        "outputId": "375e03fb-db4a-43f5-9508-4dedbe42c259",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "BVRRNCmyib5P",
         "colab_type": "code",
-        "outputId": "4f7f12c8-fa14-4a89-abda-5b2ed38525fb",
+        "outputId": "35930b5a-c8a0-45b3-b8f6-4e7a5a79a71f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "j6rqUTswiu5r",
         "colab_type": "code",
-        "outputId": "7b548bab-32be-4b3a-bc1a-db79308bf32f",
+        "outputId": "cd24562a-e61e-4b0f-cc61-7cc649b4e592",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -198,7 +198,7 @@
       "metadata": {
         "id": "Xyd_3vJLjA-v",
         "colab_type": "code",
-        "outputId": "02cfb7e4-7965-4cbc-b41e-c5286d400a9b",
+        "outputId": "c9002593-b99d-48ce-8ca8-5503edeea986",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -247,7 +247,7 @@
       "metadata": {
         "id": "TXFWWgmkjqyu",
         "colab_type": "code",
-        "outputId": "0a2e29af-873f-42fd-d4a4-ff631cf1bd5d",
+        "outputId": "b5a41465-feb0-4caa-cd46-19ee9d75b0c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -311,7 +311,7 @@
       "metadata": {
         "id": "jroDkrLPkAoC",
         "colab_type": "code",
-        "outputId": "89c3190b-72a6-40f7-83d8-2b64ba76eec0",
+        "outputId": "3223458a-42a9-440f-f124-5f7de9b59a91",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
@@ -337,7 +337,7 @@
       "metadata": {
         "id": "YWyqN_ZcL2jy",
         "colab_type": "code",
-        "outputId": "bb8e2d66-2d67-4449-e53d-6c6b14a37e03",
+        "outputId": "222967e0-b539-4cb3-89db-77dd0c42b2d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "rL2sfe9eL89v",
         "colab_type": "code",
-        "outputId": "6f383d43-66c0-4b46-b3bb-256eb95b5e29",
+        "outputId": "2584ac41-6bba-4857-b7dd-74e749d6cb73",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -408,7 +408,7 @@
       "metadata": {
         "id": "6gSM2wsJMnMq",
         "colab_type": "code",
-        "outputId": "61e0efce-1c22-4352-acec-778138b97707",
+        "outputId": "33209501-d8a9-49a2-acd3-53df99a918a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -437,7 +437,7 @@
       "metadata": {
         "id": "BlBlcNvCM_tg",
         "colab_type": "code",
-        "outputId": "60b35e09-920a-4823-8a2a-43adf495694f",
+        "outputId": "c4784fe7-431e-4537-ec35-2f7bc6150fae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -485,7 +485,7 @@
       "metadata": {
         "id": "LE_KEKkuNUM1",
         "colab_type": "code",
-        "outputId": "3402b014-ffd5-4950-d73a-d76197cd14e5",
+        "outputId": "9e1c50b2-c755-441c-f305-be72d9d8401f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -522,7 +522,7 @@
       "metadata": {
         "id": "sId8lKDjN6Ch",
         "colab_type": "code",
-        "outputId": "3676eb8d-1332-4926-babb-72a713ff035c",
+        "outputId": "320b3044-f06f-4dfc-dbda-fc249017a7c2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -548,11 +548,11 @@
       "metadata": {
         "id": "ZguReuKNN_Ne",
         "colab_type": "code",
+        "outputId": "8e6a40c9-e210-4bc1-cae2-dde426442a31",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "235bb650-41fa-4b86-d783-e6924a16bf10"
+        }
       },
       "source": [
         "part_stanza = \"\"\"From fairest creatures we desire increase,\n",
@@ -608,11 +608,11 @@
       "metadata": {
         "id": "9BNeUeLW1pbe",
         "colab_type": "code",
+        "outputId": "64396359-23c2-46ce-f00b-209c465be2b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "f844c3ae-c4ff-4c61-db47-7aa605db2228"
+        }
       },
       "source": [
         "total_num_seq = len(text)//(seq_len+1)\n",
@@ -638,6 +638,546 @@
       "cell_type": "code",
       "metadata": {
         "id": "EYjLxt7g1tnZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "06304a9a-4d86-4c6c-c1ee-7ceddcbf187f"
+      },
+      "source": [
+        "# Create Training Sequences\n",
+        "char_dataset = tf.data.Dataset.from_tensor_slices(encoded_text)\n",
+        "\n",
+        "for i in char_dataset.take(500):\n",
+        "     print(ind_to_char[i.numpy()])"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            " \n",
+            "1\n",
+            "\n",
+            "\n",
+            " \n",
+            " \n",
+            "F\n",
+            "r\n",
+            "o\n",
+            "m\n",
+            " \n",
+            "f\n",
+            "a\n",
+            "i\n",
+            "r\n",
+            "e\n",
+            "s\n",
+            "t\n",
+            " \n",
+            "c\n",
+            "r\n",
+            "e\n",
+            "a\n",
+            "t\n",
+            "u\n",
+            "r\n",
+            "e\n",
+            "s\n",
+            " \n",
+            "w\n",
+            "e\n",
+            " \n",
+            "d\n",
+            "e\n",
+            "s\n",
+            "i\n",
+            "r\n",
+            "e\n",
+            " \n",
+            "i\n",
+            "n\n",
+            "c\n",
+            "r\n",
+            "e\n",
+            "a\n",
+            "s\n",
+            "e\n",
+            ",\n",
+            "\n",
+            "\n",
+            " \n",
+            " \n",
+            "T\n",
+            "h\n",
+            "a\n",
+            "t\n",
+            " \n",
+            "t\n",
+            "h\n",
+            "e\n",
+            "r\n",
+            "e\n",
+            "b\n",
+            "y\n",
+            " \n",
+            "b\n",
+            "e\n",
+            "a\n",
+            "u\n",
+            "t\n",
+            "y\n",
+            "'\n",
+            "s\n",
+            " \n",
+            "r\n",
+            "o\n",
+            "s\n",
+            "e\n",
+            " \n",
+            "m\n",
+            "i\n",
+            "g\n",
+            "h\n",
+            "t\n",
+            " \n",
+            "n\n",
+            "e\n",
+            "v\n",
+            "e\n",
+            "r\n",
+            " \n",
+            "d\n",
+            "i\n",
+            "e\n",
+            ",\n",
+            "\n",
+            "\n",
+            " \n",
+            " \n",
+            "B\n",
+            "u\n",
+            "t\n",
+            " \n",
+            "a\n",
+            "s\n",
+            " \n",
+            "t\n",
+            "h\n",
+            "e\n",
+            " \n",
+            "r\n",
+            "i\n",
+            "p\n",
+            "e\n",
+            "r\n",
+            " \n",
+            "s\n",
+            "h\n",
+            "o\n",
+            "u\n",
+            "l\n",
+            "d\n",
+            " \n",
+            "b\n",
+            "y\n",
+            " \n",
+            "t\n",
+            "i\n",
+            "m\n",
+            "e\n",
+            " \n",
+            "d\n",
+            "e\n",
+            "c\n",
+            "e\n",
+            "a\n",
+            "s\n",
+            "e\n",
+            ",\n",
+            "\n",
+            "\n",
+            " \n",
+            " \n",
+            "H\n",
+            "i\n",
+            "s\n",
+            " \n",
+            "t\n",
+            "e\n",
+            "n\n",
+            "d\n",
+            "e\n",
+            "r\n",
+            " \n",
+            "h\n",
+            "e\n",
+            "i\n",
+            "r\n",
+            " \n",
+            "m\n",
+            "i\n",
+            "g\n",
+            "h\n",
+            "t\n",
+            " \n",
+            "b\n",
+            "e\n",
+            "a\n",
+            "r\n",
+            " \n",
+            "h\n",
+            "i\n",
+            "s\n",
+            " \n",
+            "m\n",
+            "e\n",
+            "m\n",
+            "o\n",
+            "r\n",
+            "y\n",
+            ":\n",
+            "\n",
+            "\n",
+            " \n",
+            " \n",
+            "B\n",
+            "u\n",
+            "t\n",
+            " \n",
+            "t\n",
+            "h\n",
+            "o\n",
+            "u\n",
+            " \n",
+            "c\n",
+            "o\n",
+            "n\n",
+            "t\n",
+            "r\n",
+            "a\n",
+            "c\n",
+            "t\n",
+            "e\n",
+            "d\n",
+            " \n",
+            "t\n",
+            "o\n",
+            " \n",
+            "t\n",
+            "h\n",
+            "i\n",
+            "n\n",
+            "e\n",
+            " \n",
+            "o\n",
+            "w\n",
+            "n\n",
+            " \n",
+            "b\n",
+            "r\n",
+            "i\n",
+            "g\n",
+            "h\n",
+            "t\n",
+            " \n",
+            "e\n",
+            "y\n",
+            "e\n",
+            "s\n",
+            ",\n",
+            "\n",
+            "\n",
+            " \n",
+            " \n",
+            "F\n",
+            "e\n",
+            "e\n",
+            "d\n",
+            "'\n",
+            "s\n",
+            "t\n",
+            " \n",
+            "t\n",
+            "h\n",
+            "y\n",
+            " \n",
+            "l\n",
+            "i\n",
+            "g\n",
+            "h\n",
+            "t\n",
+            "'\n",
+            "s\n",
+            " \n",
+            "f\n",
+            "l\n",
+            "a\n",
+            "m\n",
+            "e\n",
+            " \n",
+            "w\n",
+            "i\n",
+            "t\n",
+            "h\n",
+            " \n",
+            "s\n",
+            "e\n",
+            "l\n",
+            "f\n",
+            "-\n",
+            "s\n",
+            "u\n",
+            "b\n",
+            "s\n",
+            "t\n",
+            "a\n",
+            "n\n",
+            "t\n",
+            "i\n",
+            "a\n",
+            "l\n",
+            " \n",
+            "f\n",
+            "u\n",
+            "e\n",
+            "l\n",
+            ",\n",
+            "\n",
+            "\n",
+            " \n",
+            " \n",
+            "M\n",
+            "a\n",
+            "k\n",
+            "i\n",
+            "n\n",
+            "g\n",
+            " \n",
+            "a\n",
+            " \n",
+            "f\n",
+            "a\n",
+            "m\n",
+            "i\n",
+            "n\n",
+            "e\n",
+            " \n",
+            "w\n",
+            "h\n",
+            "e\n",
+            "r\n",
+            "e\n",
+            " \n",
+            "a\n",
+            "b\n",
+            "u\n",
+            "n\n",
+            "d\n",
+            "a\n",
+            "n\n",
+            "c\n",
+            "e\n",
+            " \n",
+            "l\n",
+            "i\n",
+            "e\n",
+            "s\n",
+            ",\n",
+            "\n",
+            "\n",
+            " \n",
+            " \n",
+            "T\n",
+            "h\n",
+            "y\n",
+            " \n",
+            "s\n",
+            "e\n",
+            "l\n",
+            "f\n",
+            " \n",
+            "t\n",
+            "h\n",
+            "y\n",
+            " \n",
+            "f\n",
+            "o\n",
+            "e\n",
+            ",\n",
+            " \n",
+            "t\n",
+            "o\n",
+            " \n",
+            "t\n",
+            "h\n",
+            "y\n",
+            " \n",
+            "s\n",
+            "w\n",
+            "e\n",
+            "e\n",
+            "t\n",
+            " \n",
+            "s\n",
+            "e\n",
+            "l\n",
+            "f\n",
+            " \n",
+            "t\n",
+            "o\n",
+            "o\n",
+            " \n",
+            "c\n",
+            "r\n",
+            "u\n",
+            "e\n",
+            "l\n",
+            ":\n",
+            "\n",
+            "\n",
+            " \n",
+            " \n",
+            "T\n",
+            "h\n",
+            "o\n",
+            "u\n",
+            " \n",
+            "t\n",
+            "h\n",
+            "a\n",
+            "t\n",
+            " \n",
+            "a\n",
+            "r\n",
+            "t\n",
+            " \n",
+            "n\n",
+            "o\n",
+            "w\n",
+            " \n",
+            "t\n",
+            "h\n",
+            "e\n",
+            " \n",
+            "w\n",
+            "o\n",
+            "r\n",
+            "l\n",
+            "d\n",
+            "'\n",
+            "s\n",
+            " \n",
+            "f\n",
+            "r\n",
+            "e\n",
+            "s\n",
+            "h\n",
+            " \n",
+            "o\n",
+            "r\n",
+            "n\n",
+            "a\n",
+            "m\n",
+            "e\n",
+            "n\n",
+            "t\n",
+            ",\n",
+            "\n",
+            "\n",
+            " \n",
+            " \n",
+            "A\n",
+            "n\n",
+            "d\n",
+            " \n",
+            "o\n",
+            "n\n",
+            "l\n",
+            "y\n",
+            " \n",
+            "h\n",
+            "e\n",
+            "r\n",
+            "a\n",
+            "l\n",
+            "d\n",
+            " \n",
+            "t\n",
+            "o\n",
+            " \n",
+            "t\n",
+            "h\n",
+            "e\n",
+            " \n",
+            "g\n",
+            "a\n",
+            "u\n",
+            "d\n",
+            "y\n",
+            " \n",
+            "s\n",
+            "p\n",
+            "r\n",
+            "i\n",
+            "n\n",
+            "g\n",
+            ",\n",
+            "\n",
+            "\n",
+            " \n",
+            " \n",
+            "W\n",
+            "i\n",
+            "t\n",
+            "h\n",
+            "i\n",
+            "n\n",
+            " \n",
+            "t\n",
+            "h\n",
+            "i\n",
+            "n\n",
+            "e\n",
+            " \n",
+            "o\n",
+            "w\n",
+            "n\n",
+            " \n",
+            "b\n",
+            "u\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HPrwaXkYLeIh",
         "colab_type": "code",
         "colab": {}
       },
