--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyMvc0xr1Z0DQqZJwgUyMVq1",
+      "authorship_tag": "ABX9TyMfC/eGegI1E4fvEVtWdE3M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -641,18 +641,18 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 572
         },
-        "outputId": "06304a9a-4d86-4c6c-c1ee-7ceddcbf187f"
+        "outputId": "6bf93757-953f-4a3c-addb-3dfa55c8eec1"
       },
       "source": [
         "# Create Training Sequences\n",
         "char_dataset = tf.data.Dataset.from_tensor_slices(encoded_text)\n",
         "\n",
-        "for i in char_dataset.take(500):\n",
+        "for i in char_dataset.take(30):\n",
         "     print(ind_to_char[i.numpy()])"
       ],
-      "execution_count": 18,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,490 +688,25 @@
             "F\n",
             "r\n",
             "o\n",
-            "m\n",
-            " \n",
-            "f\n",
-            "a\n",
-            "i\n",
-            "r\n",
-            "e\n",
-            "s\n",
-            "t\n",
-            " \n",
-            "c\n",
-            "r\n",
-            "e\n",
-            "a\n",
-            "t\n",
-            "u\n",
-            "r\n",
-            "e\n",
-            "s\n",
-            " \n",
-            "w\n",
-            "e\n",
-            " \n",
-            "d\n",
-            "e\n",
-            "s\n",
-            "i\n",
-            "r\n",
-            "e\n",
-            " \n",
-            "i\n",
-            "n\n",
-            "c\n",
-            "r\n",
-            "e\n",
-            "a\n",
-            "s\n",
-            "e\n",
-            ",\n",
-            "\n",
-            "\n",
-            " \n",
-            " \n",
-            "T\n",
-            "h\n",
-            "a\n",
-            "t\n",
-            " \n",
-            "t\n",
-            "h\n",
-            "e\n",
-            "r\n",
-            "e\n",
-            "b\n",
-            "y\n",
-            " \n",
-            "b\n",
-            "e\n",
-            "a\n",
-            "u\n",
-            "t\n",
-            "y\n",
-            "'\n",
-            "s\n",
-            " \n",
-            "r\n",
-            "o\n",
-            "s\n",
-            "e\n",
-            " \n",
-            "m\n",
-            "i\n",
-            "g\n",
-            "h\n",
-            "t\n",
-            " \n",
-            "n\n",
-            "e\n",
-            "v\n",
-            "e\n",
-            "r\n",
-            " \n",
-            "d\n",
-            "i\n",
-            "e\n",
-            ",\n",
-            "\n",
-            "\n",
-            " \n",
-            " \n",
-            "B\n",
-            "u\n",
-            "t\n",
-            " \n",
-            "a\n",
-            "s\n",
-            " \n",
-            "t\n",
-            "h\n",
-            "e\n",
-            " \n",
-            "r\n",
-            "i\n",
-            "p\n",
-            "e\n",
-            "r\n",
-            " \n",
-            "s\n",
-            "h\n",
-            "o\n",
-            "u\n",
-            "l\n",
-            "d\n",
-            " \n",
-            "b\n",
-            "y\n",
-            " \n",
-            "t\n",
-            "i\n",
-            "m\n",
-            "e\n",
-            " \n",
-            "d\n",
-            "e\n",
-            "c\n",
-            "e\n",
-            "a\n",
-            "s\n",
-            "e\n",
-            ",\n",
-            "\n",
-            "\n",
-            " \n",
-            " \n",
-            "H\n",
-            "i\n",
-            "s\n",
-            " \n",
-            "t\n",
-            "e\n",
-            "n\n",
-            "d\n",
-            "e\n",
-            "r\n",
-            " \n",
-            "h\n",
-            "e\n",
-            "i\n",
-            "r\n",
-            " \n",
-            "m\n",
-            "i\n",
-            "g\n",
-            "h\n",
-            "t\n",
-            " \n",
-            "b\n",
-            "e\n",
-            "a\n",
-            "r\n",
-            " \n",
-            "h\n",
-            "i\n",
-            "s\n",
-            " \n",
-            "m\n",
-            "e\n",
-            "m\n",
-            "o\n",
-            "r\n",
-            "y\n",
-            ":\n",
-            "\n",
-            "\n",
-            " \n",
-            " \n",
-            "B\n",
-            "u\n",
-            "t\n",
-            " \n",
-            "t\n",
-            "h\n",
-            "o\n",
-            "u\n",
-            " \n",
-            "c\n",
-            "o\n",
-            "n\n",
-            "t\n",
-            "r\n",
-            "a\n",
-            "c\n",
-            "t\n",
-            "e\n",
-            "d\n",
-            " \n",
-            "t\n",
-            "o\n",
-            " \n",
-            "t\n",
-            "h\n",
-            "i\n",
-            "n\n",
-            "e\n",
-            " \n",
-            "o\n",
-            "w\n",
-            "n\n",
-            " \n",
-            "b\n",
-            "r\n",
-            "i\n",
-            "g\n",
-            "h\n",
-            "t\n",
-            " \n",
-            "e\n",
-            "y\n",
-            "e\n",
-            "s\n",
-            ",\n",
-            "\n",
-            "\n",
-            " \n",
-            " \n",
-            "F\n",
-            "e\n",
-            "e\n",
-            "d\n",
-            "'\n",
-            "s\n",
-            "t\n",
-            " \n",
-            "t\n",
-            "h\n",
-            "y\n",
-            " \n",
-            "l\n",
-            "i\n",
-            "g\n",
-            "h\n",
-            "t\n",
-            "'\n",
-            "s\n",
-            " \n",
-            "f\n",
-            "l\n",
-            "a\n",
-            "m\n",
-            "e\n",
-            " \n",
-            "w\n",
-            "i\n",
-            "t\n",
-            "h\n",
-            " \n",
-            "s\n",
-            "e\n",
-            "l\n",
-            "f\n",
-            "-\n",
-            "s\n",
-            "u\n",
-            "b\n",
-            "s\n",
-            "t\n",
-            "a\n",
-            "n\n",
-            "t\n",
-            "i\n",
-            "a\n",
-            "l\n",
-            " \n",
-            "f\n",
-            "u\n",
-            "e\n",
-            "l\n",
-            ",\n",
-            "\n",
-            "\n",
-            " \n",
-            " \n",
-            "M\n",
-            "a\n",
-            "k\n",
-            "i\n",
-            "n\n",
-            "g\n",
-            " \n",
-            "a\n",
-            " \n",
-            "f\n",
-            "a\n",
-            "m\n",
-            "i\n",
-            "n\n",
-            "e\n",
-            " \n",
-            "w\n",
-            "h\n",
-            "e\n",
-            "r\n",
-            "e\n",
-            " \n",
-            "a\n",
-            "b\n",
-            "u\n",
-            "n\n",
-            "d\n",
-            "a\n",
-            "n\n",
-            "c\n",
-            "e\n",
-            " \n",
-            "l\n",
-            "i\n",
-            "e\n",
-            "s\n",
-            ",\n",
-            "\n",
-            "\n",
-            " \n",
-            " \n",
-            "T\n",
-            "h\n",
-            "y\n",
-            " \n",
-            "s\n",
-            "e\n",
-            "l\n",
-            "f\n",
-            " \n",
-            "t\n",
-            "h\n",
-            "y\n",
-            " \n",
-            "f\n",
-            "o\n",
-            "e\n",
-            ",\n",
-            " \n",
-            "t\n",
-            "o\n",
-            " \n",
-            "t\n",
-            "h\n",
-            "y\n",
-            " \n",
-            "s\n",
-            "w\n",
-            "e\n",
-            "e\n",
-            "t\n",
-            " \n",
-            "s\n",
-            "e\n",
-            "l\n",
-            "f\n",
-            " \n",
-            "t\n",
-            "o\n",
-            "o\n",
-            " \n",
-            "c\n",
-            "r\n",
-            "u\n",
-            "e\n",
-            "l\n",
-            ":\n",
-            "\n",
-            "\n",
-            " \n",
-            " \n",
-            "T\n",
-            "h\n",
-            "o\n",
-            "u\n",
-            " \n",
-            "t\n",
-            "h\n",
-            "a\n",
-            "t\n",
-            " \n",
-            "a\n",
-            "r\n",
-            "t\n",
-            " \n",
-            "n\n",
-            "o\n",
-            "w\n",
-            " \n",
-            "t\n",
-            "h\n",
-            "e\n",
-            " \n",
-            "w\n",
-            "o\n",
-            "r\n",
-            "l\n",
-            "d\n",
-            "'\n",
-            "s\n",
-            " \n",
-            "f\n",
-            "r\n",
-            "e\n",
-            "s\n",
-            "h\n",
-            " \n",
-            "o\n",
-            "r\n",
-            "n\n",
-            "a\n",
-            "m\n",
-            "e\n",
-            "n\n",
-            "t\n",
-            ",\n",
-            "\n",
-            "\n",
-            " \n",
-            " \n",
-            "A\n",
-            "n\n",
-            "d\n",
-            " \n",
-            "o\n",
-            "n\n",
-            "l\n",
-            "y\n",
-            " \n",
-            "h\n",
-            "e\n",
-            "r\n",
-            "a\n",
-            "l\n",
-            "d\n",
-            " \n",
-            "t\n",
-            "o\n",
-            " \n",
-            "t\n",
-            "h\n",
-            "e\n",
-            " \n",
-            "g\n",
-            "a\n",
-            "u\n",
-            "d\n",
-            "y\n",
-            " \n",
-            "s\n",
-            "p\n",
-            "r\n",
-            "i\n",
-            "n\n",
-            "g\n",
-            ",\n",
-            "\n",
-            "\n",
-            " \n",
-            " \n",
-            "W\n",
-            "i\n",
-            "t\n",
-            "h\n",
-            "i\n",
-            "n\n",
-            " \n",
-            "t\n",
-            "h\n",
-            "i\n",
-            "n\n",
-            "e\n",
-            " \n",
-            "o\n",
-            "w\n",
-            "n\n",
-            " \n",
-            "b\n",
-            "u\n"
+            "m\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5ccdAqaqL7Vg",
+        "colab_type": "text"
+      },
+      "source": [
+        "The **batch** method converts these individual character calls into sequences we can feed in as a batch. We use seq_len+1 because of zero indexing. Here is what drop_remainder means:\n",
+        "\n",
+        "drop_remainder: (Optional.) A `tf.bool` scalar `tf.Tensor`, representing\n",
+        "    whether the last batch should be dropped in the case it has fewer than\n",
+        "    `batch_size` elements; the default behavior is not to drop the smaller\n",
+        "    batch.\n"
       ]
     },
     {
