--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyMfC/eGegI1E4fvEVtWdE3M",
+      "authorship_tag": "ABX9TyOEUUdsmBXnONrB6HgblklT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -713,6 +713,51 @@
       "cell_type": "code",
       "metadata": {
         "id": "HPrwaXkYLeIh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "5a67972d-616e-4029-f594-8822738138af"
+      },
+      "source": [
+        "sequences = char_dataset.batch(seq_len+1, drop_remainder=True)\n",
+        "sequences"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<BatchDataset shapes: (121,), types: tf.int64>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lW6Lq-zjMSJu",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now that we have our sequences, we will perform the following steps for each one to create our target text sequences:\n",
+        "\n",
+        "1. Grab the input text sequence\n",
+        "2. Assign the target text sequence as the input text sequence shifted by one step forward\n",
+        "3. Group them together as a tuple"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zhHoAL1_ML4Z",
         "colab_type": "code",
         "colab": {}
       },
