--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyOEUUdsmBXnONrB6HgblklT",
+      "authorship_tag": "ABX9TyOgIRNGwEjEptDnQJFNtAKb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -758,6 +758,35 @@
       "cell_type": "code",
       "metadata": {
         "id": "zhHoAL1_ML4Z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def create_seq_targets(seq):\n",
+        "    input_txt = seq[:-1]\n",
+        "    target_txt = seq[1:]\n",
+        "    return input_txt, target_txt"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5LtfgIj0MjAf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dataset = sequences.map(create_seq_targets)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F5y4CnmxMmBx",
         "colab_type": "code",
         "colab": {}
       },
