--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyOgIRNGwEjEptDnQJFNtAKb",
+      "authorship_tag": "ABX9TyPe2v421TU1F5iDGtw+MB03",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -775,13 +775,31 @@
       "metadata": {
         "id": "5LtfgIj0MjAf",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "013aa0e4-042c-483e-b026-a381743a7afa"
       },
       "source": [
-        "dataset = sequences.map(create_seq_targets)"
+        "dataset = sequences.map(create_seq_targets)\n",
+        "dataset"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<MapDataset shapes: ((120,), (120,)), types: (tf.int64, tf.int64)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "code",
