batch creation for training

--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyPe2v421TU1F5iDGtw+MB03",
+      "authorship_tag": "ABX9TyNd5LzfEq3ucu5KnOzATlKs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -805,6 +805,69 @@
       "cell_type": "code",
       "metadata": {
         "id": "F5y4CnmxMmBx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 381
+        },
+        "outputId": "dbf239a0-750b-413a-e484-301dfac1ddc6"
+      },
+      "source": [
+        "for input_txt, target_txt in  dataset.take(1):\n",
+        "    print(input_txt.numpy())\n",
+        "    print(''.join(ind_to_char[input_txt.numpy()]))\n",
+        "    print('\\n')\n",
+        "    print(target_txt.numpy())\n",
+        "    # There is an extra whitespace!\n",
+        "    print(''.join(ind_to_char[target_txt.numpy()]))"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 0  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 12  0\n",
+            "  1  1 31 73 70 68  1 61 56 64 73 60 74 75  1 58 73 60 56 75 76 73 60 74\n",
+            "  1 78 60  1 59 60 74 64 73 60  1 64 69 58 73 60 56 74 60  8  0  1  1 45\n",
+            " 63 56 75  1 75 63 60 73 60 57 80  1 57 60 56 76 75 80  5 74  1 73 70 74\n",
+            " 60  1 68 64 62 63 75  1 69 60 77 60 73  1 59 64 60  8  0  1  1 27 76 75]\n",
+            "\n",
+            "                     1\n",
+            "  From fairest creatures we desire increase,\n",
+            "  That thereby beauty's rose might never die,\n",
+            "  But\n",
+            "\n",
+            "\n",
+            "[ 1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 12  0  1\n",
+            "  1 31 73 70 68  1 61 56 64 73 60 74 75  1 58 73 60 56 75 76 73 60 74  1\n",
+            " 78 60  1 59 60 74 64 73 60  1 64 69 58 73 60 56 74 60  8  0  1  1 45 63\n",
+            " 56 75  1 75 63 60 73 60 57 80  1 57 60 56 76 75 80  5 74  1 73 70 74 60\n",
+            "  1 68 64 62 63 75  1 69 60 77 60 73  1 59 64 60  8  0  1  1 27 76 75  1]\n",
+            "                     1\n",
+            "  From fairest creatures we desire increase,\n",
+            "  That thereby beauty's rose might never die,\n",
+            "  But \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fwfdS9yHxiRu",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Generating training batches\n",
+        "\n",
+        "Now that we have the actual sequences, we will create the batches, we want to shuffle these sequences into a random order, so the model doesn't overfit to any section of the text, but can instead generate characters given any seed text."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LEQ0L5iUxVgk",
         "colab_type": "code",
         "colab": {}
       },
