batch generation for training

--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyNd5LzfEq3ucu5KnOzATlKs",
+      "authorship_tag": "ABX9TyN8LPRsMISmB/GGex+8J6I3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -868,6 +868,56 @@
       "cell_type": "code",
       "metadata": {
         "id": "LEQ0L5iUxVgk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Batch size\n",
+        "batch_size = 128\n",
+        "\n",
+        "# Buffer size to shuffle the dataset so it doesn't attempt to shuffle\n",
+        "# the entire sequence in memory. Instead, it maintains a buffer in which it shuffles elements\n",
+        "buffer_size = 10000\n",
+        "\n",
+        "dataset = dataset.shuffle(buffer_size).batch(batch_size, drop_remainder=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AquQW5lmx6AH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "abbc3b00-a926-4583-940d-fb6d765825dc"
+      },
+      "source": [
+        "dataset"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<BatchDataset shapes: ((128, 120), (128, 120)), types: (tf.int64, tf.int64)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6hw0OD3Zx7oB",
         "colab_type": "code",
         "colab": {}
       },
