--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyN8LPRsMISmB/GGex+8J6I3",
+      "authorship_tag": "ABX9TyMMJ2I3VQozEAGSX35y5Rhf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -912,6 +912,20 @@
           },
           "execution_count": 24
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZRxICPWnyRoK",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Step 4: Creating the Model\n",
+        "\n",
+        "We will use an LSTM based model with a few extra features, including an embedding layer to start off with and **two** LSTM layers. We based this model architecture off the [DeepMoji](https://deepmoji.mit.edu/) and the original source code can be found [here](https://github.com/bfelbo/DeepMoji).\n",
+        "\n",
+        "The embedding layer will serve as the input layer, which essentially creates a lookup table that maps the numbers indices of each character to a vector with \"embedding dim\" number of dimensions. As you can imagine, the larger this embedding size, the more complex the training. This is similar to the idea behind word2vec, where words are mapped to some n-dimensional space. Embedding before feeding straight into the LSTM usually leads to more realisitic results."
       ]
     },
     {
